--- a/ClassDemo/Website/Web.config
+++ b/ClassDemo/Website/Web.config
@@ -10,10 +10,7 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection"
-      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Website-96463614-82e4-4132-947c-0490e425bc77;AttachDbFilename=|DataDirectory|\aspnet-Website-96463614-82e4-4132-947c-0490e425bc77.mdf;Integrated Security=SSPI"
-      providerName="System.Data.SqlClient"/>
+  <connectionStrings configSource="WebConnectionStrings.config">
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
@@ -104,6 +101,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context disableDatabaseInitialization="true"
+                type="ChinookSystem.DAL.ChinookContext, ChinookSystem">
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
