Display using parameter query: GridView and ListView
Also added was a drop down menu in the site master

--- a/ClassDemo/Chinook.Data/Chinook.Data.csproj
+++ b/ClassDemo/Chinook.Data/Chinook.Data.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Enitities\Album.cs" />
     <Compile Include="Enitities\Artist.cs" />
+    <Compile Include="Enitities\MediaType.cs" />
+    <Compile Include="Enitities\Track.cs" />
     <Compile Include="POCOs\AlbumArtist.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
