--- a/ClassDemo/Website/Web.config
+++ b/ClassDemo/Website/Web.config
@@ -98,7 +98,8 @@
   </runtime>
   <entityFramework>
     <contexts>
-      <context disableDatabaseInitialization="true" type="ChinookSystem.DAL.ChinookContext, ChinookSystem">
+      <context disableDatabaseInitialization="true" 
+               type="ChinookSystem.DAL.ChinookContext, ChinookSystem">
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
