--- a/ClassDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ClassDemo/ChinookSystem/ChinookSystem.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="BLL\AlbumController.cs" />
     <Compile Include="BLL\ArtistController.cs" />
+    <Compile Include="BLL\EmployeeController.cs" />
     <Compile Include="BLL\Security\RoleManager.cs" />
     <Compile Include="BLL\Security\UserManager.cs" />
     <Compile Include="DAL\ChinookContext.cs" />
