conversion of security from website to application

--- a/ClassDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ClassDemo/ChinookSystem/ChinookSystem.csproj
@@ -64,7 +64,7 @@
     <Compile Include="BLL\Security\RoleManager.cs" />
     <Compile Include="BLL\Security\UserManager.cs" />
     <Compile Include="DAL\ChinookContext.cs" />
-    <Compile Include="DAL\Security\ApplicationContext.cs" />
+    <Compile Include="DAL\Security\ApplicationDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
