--- a/ClassDemo/Chinook.Data/Chinook.Data.csproj
+++ b/ClassDemo/Chinook.Data/Chinook.Data.csproj
@@ -30,13 +30,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.EntityFramework">
       <HintPath>..\Website\Bin\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,8 +57,14 @@
     <Compile Include="DTOs\ArtistAlbumReleases.cs" />
     <Compile Include="Enitities\Album.cs" />
     <Compile Include="Enitities\Artist.cs" />
+    <Compile Include="Enitities\Customer.cs" />
     <Compile Include="Enitities\Employee.cs" />
+    <Compile Include="Enitities\Genre.cs" />
+    <Compile Include="Enitities\Invoice.cs" />
+    <Compile Include="Enitities\InvoiceLine.cs" />
     <Compile Include="Enitities\MediaType.cs" />
+    <Compile Include="Enitities\Playlist.cs" />
+    <Compile Include="Enitities\PlaylistTrack.cs" />
     <Compile Include="Enitities\Security\ApplicationUser.cs" />
     <Compile Include="Enitities\Security\RoleProfile.cs" />
     <Compile Include="Enitities\Security\SecurityRoles.cs" />
@@ -61,7 +76,13 @@
     <Compile Include="POCOs\RegisteredEmployeePOCO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
