create queries for Manage PlayList

--- a/ClassDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ClassDemo/ChinookSystem/ChinookSystem.csproj
@@ -63,8 +63,11 @@
     <Compile Include="BLL\EmployeeController.cs" />
     <Compile Include="BLL\Security\RoleManager.cs" />
     <Compile Include="BLL\Security\UserManager.cs" />
+    <Compile Include="BLL\TrackController.cs" />
     <Compile Include="DAL\ChinookContext.cs" />
     <Compile Include="DAL\Security\ApplicationDbContext.cs" />
+    <Compile Include="BLL\GenreController.cs" />
+    <Compile Include="BLL\MediaTypeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
