--- a/ClassDemo/Chinook.Data/Chinook.Data.csproj
+++ b/ClassDemo/Chinook.Data/Chinook.Data.csproj
@@ -74,6 +74,8 @@
     <Compile Include="POCOs\AlbumRelease.cs" />
     <Compile Include="POCOs\EmployeeListPOCO.cs" />
     <Compile Include="POCOs\RegisteredEmployeePOCO.cs" />
+    <Compile Include="POCOs\SelectionList.cs" />
+    <Compile Include="POCOs\TrackList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
