creating the manage playlist example

--- a/ClassDemo/Chinook.Data/Chinook.Data.csproj
+++ b/ClassDemo/Chinook.Data/Chinook.Data.csproj
@@ -76,6 +76,7 @@
     <Compile Include="POCOs\RegisteredEmployeePOCO.cs" />
     <Compile Include="POCOs\SelectionList.cs" />
     <Compile Include="POCOs\TrackList.cs" />
+    <Compile Include="POCOs\UserPlaylistTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
